@@ -2,6 +2,7 @@ mlr_new:
 - Feature filter "univariate" had a bad name, was deprecated and is now called
  "univariate.model.score". The new one also has better defaults.
 - (generate/plot)PartialPrediction: added new arg "geom" for tile plots
+- small fix for plotBMRSummary
 
 new learners
 -- classif.randomForestSRCSyn
